--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ h3{
     margin-top: 1rem;
     border-bottom: 3px dashed var(--primiary-color);
     justify-content: center;
-    padding: 0 2rem;
+    padding: 0 1rem;
     padding-bottom: 1rem;
 }
 
@@ -64,7 +64,21 @@ h3{
 }
 
 .div-no-img p{
-    font-family: var(--poet);
-    font-weight: 400 !important;
-    font-size: 24px;
+    font-family: var(--indie);
+    font-weight: bold !important;
+    font-size: 28px;
+}
+
+.price-div img{
+    width: 100%;
+    max-width: 150px;
+}
+
+
+.title h2{
+    font-family: var(--poet) !important;
+    color: var(--primiary-color);
+    font-size: 34px;
+    text-align: center;
+    margin-top: 2rem;
 }
