letter_upper_case

--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ h3{
 
 
 .title h2{
-    font-family: var(--poet) !important;
+    font-family: var(--indie) !important;
     color: var(--primiary-color);
     font-size: 34px;
     text-align: center;
