--- a/style.css
+++ b/style.css
@@ -76,9 +76,10 @@ h3{
 
 
 .title h2{
-    font-family: var(--indie) !important;
+    font-family: var(--poet) !important;
     color: var(--primiary-color);
     font-size: 34px;
     text-align: center;
-    margin-top: 2rem;
+    margin-top: 4rem;
+    margin-bottom: 1rem;
 }
