--- a/style.css
+++ b/style.css
@@ -1,90 +1,92 @@
-
-
-:root{
-    --primiary-color:#0D619E;
-    --dela: "Dela Gothic One", cursive;
-    --poppins: "Poppins", sans-serif;
-    --secondary-color:#194a7a;
-    --dm:"DM Sans", sans-serif;
-    --nunito:"Nunito", sans-serif;
-    --poet: "Poetsen One", sans-serif;
-    --lobster :"Lobster", sans-serif;
-    --indie: "Indie Flower", cursive;
-    --dancing:"Dancing Script", cursive;
-
+:root {
+  --primiary-color: #0d619e;
+  --dela: "Dela Gothic One", cursive;
+  --poppins: "Poppins", sans-serif;
+  --secondary-color: #194a7a;
+  --dm: "DM Sans", sans-serif;
+  --nunito: "Nunito", sans-serif;
+  --poet: "Poetsen One", sans-serif;
+  --lobster: "Lobster", sans-serif;
+  --indie: "Indie Flower", cursive;
+  --dancing: "Dancing Script", cursive;
+  --josef: "Josefin Sans", sans-serif;
+  --public:"Public Sans", sans-serif;
 }
 
-
-p,h1,h2,h3,h4,h5,h6{
-    margin: 0;
-    padding: 0;
+body {
+  background-color: #F4F6F8;
 }
 
-h3{
-  font-family: var(--indie);
-  font-weight: 700;
-  font-style: normal;
-  font-size: 24px;
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
+}
+
+.title h2 {
+  font-family: var(--indie) !important;
+  color: var(--primiary-color);
+  font-size: 34px;
   text-align: center;
-  
+  margin-top: 4rem;
+  margin-bottom: 1rem;
+  font-weight: 300 !important;
 }
 
-h3{
-    color: #111013;
-    text-align: left;
+h3 {
+  font-style: normal;
+  font-size: 1.5rem;
+  text-align: center;
+  font-family: var(--indie);
+  font-weight: 200;
+  color: #212b36;
+  /* letter-spacing: 1px; */
 }
 
-.price{
-    text-align: left;
-    color: var(--primiary-color);
-    font-size: 30px;
-    font-family: var(--indie);
-    font-weight: 700;
-    
+.kahve h3,
+.kahve h2 {
+  font-family: var(--indie) !important;
 }
 
-.price-div{
-    margin-top: 1rem;
-    border-bottom: 3px dashed var(--primiary-color);
-    justify-content: center;
-    padding: 0 1rem;
-    padding-bottom: 1rem;
+.price {
+  text-align: left;
+  color: var(--primiary-color);
+  font-size: 24px;
+  font-family: var(--nunito) !important;
+  font-weight: 400 !important;
 }
 
-.price p{
-   margin-bottom: 0;
+.price-div {
+  margin-top: 1rem;
+  border-bottom: 3px dashed var(--primiary-color);
+  justify-content: center;
+  padding: 0 1rem;
+  padding-bottom: 1rem;
 }
 
-.div-no-img{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem;
-    border-bottom: 3px dashed var(--primiary-color);
+.price p {
+  margin-bottom: 0;
 }
 
-.div-no-img p{
-    font-family: var(--indie);
-    font-weight: bold !important;
-    font-size: 28px;
+.div-no-img {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  border-bottom: 3px dashed var(--primiary-color);
 }
 
-.price-div img{
-    width: 100%;
-    max-width: 150px;
+.price-div img {
+  width: 100%;
+  max-width: 150px;
 }
 
-
-.title h2{
-    font-family: var(--poet) !important;
-    color: var(--primiary-color);
-    font-size: 34px;
-    text-align: center;
-    margin-top: 4rem;
-    margin-bottom: 1rem;
-}
-
-.fade-in-section {
+/* .fade-in-section {
     opacity: 0;
     transform: translateY(20px);
     transition: opacity 0.5s ease, transform 0.5s ease;
@@ -93,5 +95,18 @@ h3{
   .fade-in-section.fade-in {
     opacity: 1;
     transform: translateY(0);
-  }
-  
+  } */
+
+.with-desc{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-direction: column;
+}
+
+.with-desc .desc{
+    margin-top: .3rem;
+    font-size: .9rem;
+    color: #637381;
+    font-family: var(--indie);
+}
