--- a/style.css
+++ b/style.css
@@ -29,6 +29,12 @@ h6 {
   padding: 0;
 }
 
+
+.init-title{
+  padding: 0 1rem;
+}
+
+
 .title h2 {
   font-family: var(--indie) !important;
   color: var(--primiary-color);
@@ -37,6 +43,9 @@ h6 {
   margin-top: 4rem;
   margin-bottom: 1rem;
   font-weight: 300 !important;
+}
+.first-title h2{
+  margin-top: 1rem !important;
 }
 
 h3 {
